--- a/supervisor.conf
+++ b/supervisor.conf
@@ -141,11 +141,11 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;files = relative/directory/*.ini
 
 [program:hello]
-command=/root/python_projects/flask/mov2pic/venv/bin/gunicorn -w8 -b0.0.0.0:80 hello:app      ; supervisor启动命令
-directory=/root/python_projects/flask/mov2pic/                                                ; 项目的文件夹路径
-startsecs=0                                                                                   ; 启动时间
-stopwaitsecs=0                                                                                ; 终止等待时间
-autostart=false                                                                               ; 是否自动启动
-autorestart=false                                                                             ; 是否自动重启
-stdout_logfile=/root/python_projects/flask/mov2pic/log/gunicorn.log                           ; log 日志
-stderr_logfile=/root/python_projects/flask/mov2pic/log/gunicorn.err                           ; 错误日志
+command=./venv/bin/gunicorn -w8 -b0.0.0.0:80 hello:app      ; supervisor启动命令
+directory=.                                                 ; 项目的文件夹路径
+startsecs=0                                                 ; 启动时间
+stopwaitsecs=0                                              ; 终止等待时间
+autostart=false                                             ; 是否自动启动
+autorestart=false                                           ; 是否自动重启
+stdout_logfile=./log/gunicorn.log                           ; log 日志
+stderr_logfile=./log/gunicorn.err                           ; 错误日志
